[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
blstrs = "0.7.1"
clap = { version = "4.5.48", features = ["derive", "env"] }
crypto = { path = "crypto" }
curve25519-dalek = "4.1.3"
ed25519-dalek = { version = "2.2.0", features = ["pkcs8", "alloc"] }
ff = "0.13.1"
oid-registry = "0.8.1"
primitive-types = "0.14.0"
prost = "0.14.1"
prost-types = "0.14.1"
rcgen = "0.14.5"
rustls = "0.23.32"
time = "0.3.44"
tokio = { version = "1.47.1", features = ["full", "test-util"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
x509-parser = "0.18.0"

[build-dependencies]
tonic-prost-build = "*"
