[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
blstrs = "0.7.1"
clap = { version = "4.5.58", features = ["derive", "env"] }
crypto = { path = "crypto" }
curve25519-dalek = "4.1.3"
ed25519-dalek = "2.2.0"
ff = "0.13.1"
futures = "0.3.31"
hyper = "1.8.1"
oid-registry = "0.8.1"
p256 = "0.13.2"
primitive-types = "0.14.0"
prost = "0.14.3"
prost-types = "0.14.3"
rustls = "0.23.36"
serde_json = "1.0.149"
time = "0.3.47"
tokio = { version = "1.49.0", features = ["full", "test-util"] }
tokio-rustls = "0.26.4"
tokio-util = "0.7.18"
tonic = { version = "0.14.2", features = ["gzip", "deflate", "zstd"] }
tonic-prost = "0.14.2"
tower = "0.5.3"
x509-parser = "0.18.1"
zeroize = "1.8.2"

[build-dependencies]
tonic-prost-build = "*"
